--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ minimal_mistakes_skin: default
 search: true
 
 # Build settings
+repository: engineerhead/engineerhead.github.io
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
