--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ twitter_username: engineerhead_head
 github_username: engineerhead
 minimal_mistakes_skin: dark
 search: true
+url: https://engineerhead.github.io
 
 # Build settings
 repository: engineerhead/engineerhead.github.io
